@@ -1,3 +1,6 @@
+????-??-?? Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.02__00
+- New option (-m, --unique-servers) to remove repeated servers when openeing terminals (Thanks to Oliver Meissner)
+
 2013-02-26 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.01_04
 - Fixed 'ccon' not calling the correct command (Sf bug 3605002)
 - Fixed clusters not being defined correctly within the .clusterssh/config file (Sf bug 3605675)
